--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-hotel",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://umitao.github.io/cyf-hotel-react",
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -9,11 +10,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "gh-pages": "^3.0.0",
     "husky": "^2.3.0",
     "prettier": "^1.17.0",
     "pretty-quick": "^1.10.0"
